--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_URL=
 # Optional for built-in caching: Get these from Upstash Redis console
 REDIS_URL= 
 REDIS_TOKEN= 
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
