--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@tanstack/react-query": "^5.51.23",
+    "@tanstack/react-table": "^8.20.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +40,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.19.2",
     "vaul": "^1.1.1",
     "wrangler": "^3.72.0",
     "zod": "^3.23.8"
